Add Minecraft 1.16.4 version of Record Jukebox
- Global jukebox sound (centered, no attenuation, no stereo effect)
- Custom .ogg playback via SoundBufferLibrary.getStream hook (sounds/empty.ogg)
- Playlist/tags (order/shuffle/once/timer/volume), redstone pause
- Rename hint + td toggle, unload-chunk auto stop
- Volume slider linear response (fix 4.0 base saturation)
- Single source set, Java 8 compatible